src/test/deca/context/invalid/Objet/Not-Field-BadType.deca
// Description:
//      Doing operations on  public fields in main
//
// Results:
//      (RULE 3.37) Illegal operand type.
//
// History:
//      created on 19/1/2022

class A {
    boolean x;
}


{
    A a = new A();
    boolean y = !a;
}